203 test 03 (#215)
* SonarCloud fixes.

* SonarCloud fixes.

* Fixes.

* Class fixes.

* Class fix.

* Class fix.

* Class fixed.

* Class fix.

* Class fix.

* Class fixed.

* Class fixes.