@@ -3,8 +3,6 @@ package me.ehp246.aufrest.provider.jackson;
 import java.time.Instant;
 import java.util.List;
 import java.util.Set;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.junit.jupiter.api.Assertions;
@@ -12,9 +10,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.MapperFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
@@ -56,17 +52,6 @@ class JsonByJacksonTest {
 
     @SuppressWarnings("unchecked")
     @Test
-    void list_02() {
-        final var from = List.of(Instant.now(), Instant.now(), Instant.now());
-
-        final List<Instant> back = (List<Instant>) jackson.fromJson(jackson.toJson(from),
-                JacksonTypeDescriptor.of(ParameterizedTypeBuilder.ofList(Instant.class)));
-
-        back.stream().forEach(value -> Assertions.assertEquals(true, value instanceof Instant));
-    }
-
-    @SuppressWarnings("unchecked")
-    @Test
     void list_03() {
         final var from = List.of(List.of(Instant.now()), List.of(Instant.now(), Instant.now()), List.of(Instant.now()));
 
@@ -77,7 +62,7 @@ class JsonByJacksonTest {
         final var all = back.stream().flatMap(List::stream).map(value -> {
             Assertions.assertEquals(true, value instanceof Instant);
             return value;
-        }).collect(Collectors.toList());
+        }).toList();
 
         Assertions.assertEquals(4, all.size());
     }
@@ -134,27 +119,5 @@ class JsonByJacksonTest {
             Assertions.assertEquals(from.get(i).getFirstName(), list.get(i).getFirstName());
             Assertions.assertEquals(from.get(i).getLastName(), list.get(i).getLastName());
         });
-    }
-
-    // @Test
-    void view_01() throws JsonMappingException, JsonProcessingException {
-        final var expected = new Person(Instant.now(), UUID.randomUUID().toString(), UUID.randomUUID().toString(),
-                null);
-
-        final var json = OBJECT_MAPPER.writer().forType(Person.class).writeValueAsString(expected);
-
-        Assertions.assertEquals(true, json.contains(expected.getFirstName()));
-
-        var writer = OBJECT_MAPPER.writer().forType(Person.class).withView(RestView.class);
-
-        var jsonView = writer.writeValueAsString(expected);
-
-        Assertions.assertEquals(false, jsonView.contains(expected.getFirstName()));
-
-        writer = writer.withView(String.class);
-
-        jsonView = writer.writeValueAsString(expected);
-
-        Assertions.assertEquals(false, jsonView.contains(expected.getFirstName()));
     }
 }
